Kubernetes-Manifests-file/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: workshop
  name: api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: api
  template:
    metadata:
      labels:
        role: api
    spec:
      containers:
        - name: api
          image: arfath29/3-tier-app-backend
          ports:
            - containerPort: 3500
          livenessProbe:
            httpGet:
              path: /ok
              port: 3500
            initialDelaySeconds: 2
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ok
              port: 3500
            initialDelaySeconds: 5
            periodSeconds: 5
