Kubernetes-Manifests-file/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: workshop
  name: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec:
      containers:
        - name: frontend
          image: arfath29/3-tier-app-frontend
          ports:
            - containerPort: 3000
