Kubernetes-Manifests-file/mongo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: workshop
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongo
        image: mongo:4.4.6
        command:
          - "numactl"
          - "--interleave=all"
          - "mongod"
          - "--wiredTigerCacheSizeGB"
          - "0.1"
          - "--bind_ip"
          - "0.0.0.0"
        ports:
        - containerPort: 27017
