Kubernetes-Manifests-file/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: workshop
  name: api
spec:
  selector:
    role: api
  ports:
    - protocol: TCP
      port: 3500
      targetPort: 3500
