Kubernetes-Manifests-file/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: workshop
  name: frontend
spec:
  selector:
    role: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
